fix: fixed the docs and made the updatedAt field required
