# static/docs/openapi.yaml
@@ -185,19 +185,17 @@ paths:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                type: object
-                properties:
-                  text:
-                    type: string
-                    minLength: 2
-                    maxLength: 500
-                  done:
-                    type: boolean
-                  updatedAt:
-                    type: string
-                required: [updatedAt]
+              type: object
+              properties:
+                text:
+                  type: string
+                  minLength: 2
+                  maxLength: 500
+                done:
+                  type: boolean
+                updatedAt:
+                  type: string
+              required: [updatedAt]
       parameters:
         - schema:
             type: string
